# shroudstone

./: .gitignore  README.md  alembic.ini  api-client-codegen.sh  codegen.sh  nuitka_build.bat  nuitka_entrypoint.py  pyinstaller_build.bat  pyproject.toml  pyrightconfig.json  stormgate.proto
.github/workflows/: build-and-publish.yml  build-exe.yml  publish-to-pypi.yml  run-tests.yml
rust/: Cargo.toml
rust/src/: gamestate.rs  lib.rs  stormgate.rs
shroudstone/: __init__.py  __main__.py  _replay.pyi  cli.py  config.py  exe_entrypoint.py  log_utils.py  logging.py  renamer.py  replay.py  replay_analyzer.py  sgw_api.py  stormgate_pb2.py  stormgate_pb2.pyi  stormgateworld.py  test_replay.py
shroudstone/db/: engine.py  schema.py
shroudstone/db/alembic/: empty.db  env.py  script.py.mako
shroudstone/gui/: __main__.py  app.py  fonts.py  jobs.py  logview.py
shroudstone/replay/: parser.py  stormgate_pb2.py  stormgate_pb2.pyi  summary.py  versions.py
shroudstone/stormgateworld/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
shroudstone/stormgateworld/api/: __init__.py  leaderboard_entries_api.py  leaderboards_api.py  matches_api.py  players_api.py  statistics_api.py
shroudstone/stormgateworld/models/: __init__.py  activity_statistics.py  activity_statistics_activity.py  activity_statistics_entry.py  aggregation.py  countries_statistics.py  countries_statistics_entry.py  dump_format.py  error_response.py  leaderboard.py  leaderboard_dump_response.py  leaderboard_entry_history.py  leaderboard_entry_history_row.py  leaderboard_entry_response.py  leaderboard_order.py  leaderboard_response.py  league.py  match_participant_player_leaderboard_entry_response.py  match_participant_player_response.py  match_participant_response.py  match_response.py  match_result.py  match_state.py  matches_response.py  player_activity_stats.py  player_activity_stats_race.py  player_matches_response.py  player_matchups_stats.py  player_matchups_stats_entry.py  player_matchups_stats_matchup.py  player_opponents_stats.py  player_opponents_stats_opponent.py  player_response.py  player_stats_entry.py  player_stats_entry_aggregated.py  player_stats_entry_num_breakdown.py  profile_privacy.py  race.py  resolution.py  servers_statistics.py  (+6 more)
tests/: conftest.py  test_renamer.py  test_replay.py
tests/replays/: CL68360-2024.07.30-12.50.SGReplay  CL68360-2024.07.30-12.50.json  CL68360-2024.07.30-12.50.txt  CL68360-2024.07.30-16.19.SGReplay  CL68360-2024.07.30-16.19.json  CL68360-2024.07.30-16.19.txt  CL75432-2024.10.05-11.38.SGReplay  CL75432-2024.10.05-11.38.json  CL75432-2024.10.05-11.38.txt  CL75432-2024.10.05-11.51.SGReplay  CL75432-2024.10.05-11.51.json  CL75432-2024.10.05-11.51.txt  CL75432-2024.10.05-12.08.SGReplay  CL75432-2024.10.05-12.08.json  CL75432-2024.10.05-12.08.txt
tests/replays/257d5054-59f0-4e12-a4a1-0c3f593d1810/: CL69129-2024.08.10-05.40.SGReplay  CL69129-2024.08.10-05.40.json  CL69129-2024.08.10-05.40.txt
tests/replays/c6b4eb4e-4994-4e96-b098-3e1953a02033/: CL44821-2024.02.03-18.48.SGReplay  CL44821-2024.02.03-18.48.json  CL44821-2024.02.03-18.48.txt  CL44821-2024.02.13-22.25.SGReplay  CL44821-2024.02.13-22.25.json  CL44821-2024.02.13-22.25.txt  CL45737-2024.02.22-16.42.txt  (+53 more)
(+1 files in other folders)
