[package]
name = "shroudstone"
version = "0.3.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "shroudstone"
crate-type = ["cdylib"]

[dependencies]
flate2 = "1.0.30"
log = { version = "0.4.22", features = ["release_max_level_info"] }
num_enum = "0.7.3"
protobuf = "3.5.0"
pyo3 = "0.22.0"
pyo3-log = "0.11.0"
varint-rs = "2.2.0"
